feat(day 10): swagger
